Various minor cleanups, from findbugs